# projetos_Python

./: .gitignore  README.md
agenda_clientes/: mkdocs.yml  pyproject.toml
agenda_clientes/agenda_clientes/: main.kv  main.py  tools.py
agenda_clientes/agenda_clientes/infra/: conexao.py
calculadora/: README.md  pyproject.toml
calculadora/calculadora/: calculadora.kv  calculadora.py
esse_eu_li/: pyproject.toml
esse_eu_li/esse_eu_li/: main.kv  main.py
esse_eu_li/esse_eu_li/infra/: comandos_sql.sql  esse_eu_li.db
python_sqlite/: main.py
sorteio/: pyproject.toml
sorteio/sorteio/: sorteio.py
