[tool.poetry]
name = "agenda-clientes"
version = "0.1.0"
description = ""
authors = ["Deyved Antonio <deyved.antonio@gmail.com>"]
readme = "README.md"
packages = [{include = "agenda_clientes"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
