[tool.poetry]
name = "calculadora"
version = "0.1.0"
description = ""
authors = ["Deyved Antonio <deyved.antonio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
mypy = "^1.5.1"
pip-audit = "^2.6.1"
mkdocs = "^1.5.2"
prospector = "^1.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
